--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -31,7 +31,10 @@ header {
         color:white;
         text-decoration:none;
         font-size: 1.5rem;
-        line-height: 1.5rem;
+        
+        &.active {
+          text-decoration: underline;
+        }
       }
     }
   }
