US-3 US-4 US-11 Completed using mock data

--- a/src/components/UserInfos/style.scss
+++ b/src/components/UserInfos/style.scss
@@ -1,6 +1,6 @@
 @import '../../scss/main.scss';
 
-.average-sessions {
+.user-infos {
   width: 100%;
   height: 100%;
   background-color: burlywood;
