--- a/src/components/Activity/style.scss
+++ b/src/components/Activity/style.scss
@@ -3,5 +3,39 @@
 .activity {
   width: 100%;
   height: 100%;
-  background-color: aquamarine;
+  max-height: 320px;
+  background-color: $background-greyLight;
+  padding:40px;
+  border-radius: 5px;
+
+  &__header {
+    margin-bottom:30px;
+
+    &__legende {
+      &__item{
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+
+        &::before {
+          display: block;
+          margin-right: 7px;
+          content: '';
+          width:7px;
+          height: 7px;
+          border-radius: 50%;
+        }
+
+        &--primary::before {
+          background-color: $primary;
+        }
+
+        &--secondary::before {
+          background-color: $secondary;
+        }
+        
+      }
+    }
+  }
+
 }
