--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $grey;
+  font-size:0.8rem;
 }
 
 code {
@@ -37,10 +39,17 @@ code {
     line-height: normal;
     font-weight: 500;
     margin-bottom: 20px;
+    color: $secondary;
   }
   h2 {
-    font-size: 18px;
+    font-size: 1.3rem;
     line-height: 2rem;
+    color: $secondary;
+  }
+  h3 {
+    font-size: 1rem;
+    color: $secondary;
+    font-weight: 500;
   }
 }
 
