--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,7 +1,13 @@
 $primary: #E60000;
 $secondary: #000000;
 $grey: #74798C;
+$blue: #4AB8FF;
+$yellow: #F9CE23;
+$pink: #FD5181;
+
+
 
 $background-dark: #020203;
-$background-greyLight: #FBFBFB;
-$background-light: #E5E5E5;
+$background-greydark: #282D30;
+$background-light: #FBFBFB;
+$background-greyLigth: #E5E5E5;
