--- a/src/components/Activity/style.scss
+++ b/src/components/Activity/style.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   max-height: 320px;
-  background-color: $background-greyLight;
+  background-color: $background-light;
   padding:40px;
   border-radius: 5px;
 
