--- a/src/components/CustomTooltip/style.scss
+++ b/src/components/CustomTooltip/style.scss
@@ -2,11 +2,16 @@
 
 .custom-tooltip {
   background-color: $primary;
-  padding: 20px 10px;
+  padding: 10px;
   color: white;
   font-size: 0.6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
+
+  &.light{
+    background-color: white;
+    color: $secondary;
+  }
 }
