--- a/src/components/UserInfos/style.scss
+++ b/src/components/UserInfos/style.scss
@@ -3,5 +3,56 @@
 .user-infos {
   width: 100%;
   height: 100%;
-  background-color: burlywood;
+  min-height: 120px;
+  border-radius: 5px;
+  padding:30px;
+  background-color: $background-light;
+  display: flex;
+  align-items: center;
+
+  h4 {
+    font-size: 1.2rem;
+    line-height: 2rem;
+    font-weight: 500;
+    color: $secondary;
+    text-align: left;
+  }
+
+  &__container {
+    width: 100%;
+    gap:20px!important;
+    justify-content: flex-start!important;
+  }
+
+  &__icon {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width: 18px;
+    height: 18px;
+    padding: 25px;
+    border-radius:5px;
+    background-color: lighten($grey, 50%);
+
+    img {
+      width: 18px;
+      height: 18px;
+    }
+
+    &--red{
+      background-color: lighten($primary, 50%);
+    }
+
+    &--blue{
+      background-color: lighten($blue, 30%);
+    }
+
+    &--yellow{
+      background-color: lighten($yellow, 40%);
+    }
+
+    &--pink{
+      background-color: lighten($pink, 30%);
+    }
+  }
 }
