--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -6,6 +6,7 @@ header {
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-between;
+  min-height: 90px;
 
   background-color: $background-dark;
   height: 90px;
@@ -31,9 +32,9 @@ header {
         color:white;
         text-decoration:none;
         font-size: 1.5rem;
-        
+
         &.active {
-          text-decoration: underline;
+          color:$primary;
         }
       }
     }
