--- a/src/layout/Sidebar/style.scss
+++ b/src/layout/Sidebar/style.scss
@@ -6,7 +6,8 @@
   flex-direction: column;
   justify-content: center;
   flex-wrap: nowrap;
-  width: 120px;
+  width: 120px!important;
+  min-width: 120px;
   background: $background-dark;
   color: white;
 
