--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -6,15 +6,30 @@
   align-items: flex-start!important;
   height: 100%;
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 50px;  
 
   &__stats {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 50px;
   }
 
-  &__performance {
-    max-width: 260px;
+  &__card-infos {
+    max-width: 220px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap:30px;
+  }
+
+  &__activity {
+    height: 100%;
+    width: 100%;
+  }
+
+  &__rating {
+    flex: 1 1 100%;
+    height: 100%;
+    width: 100%;
+    max-height: 250px;
   }
 }
