--- a/src/components/Activity/style.scss
+++ b/src/components/Activity/style.scss
@@ -1,6 +1,7 @@
 @import '../../scss/main.scss';
 
 .activity {
+  position:relative;
   width: 100%;
   height: 100%;
   max-height: 320px;
@@ -37,5 +38,16 @@
       }
     }
   }
+
+  .rechartbar-activity {
+    &__kg {
+      fill: $background-greydark!important;
+    }
+
+    &__cal {
+      fill: $primary!important;
+    }    
+  }
+
 
 }
