--- a/src/components/Performance/style.scss
+++ b/src/components/Performance/style.scss
@@ -1,10 +1,16 @@
 @import '../../scss/main.scss';
 
 .performance {
+  position:relative;
   width: 100%;
   height: 100%;
+  min-width: 300px;
 
   padding: 20px 0px;
   border-radius: 5px;
   background-color: $background-greydark;
+
+  .rechartradar {
+    fill: $primary!important;
+  }
 }
