--- a/src/components/Score/style.scss
+++ b/src/components/Score/style.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  min-width: 300px;
 
   padding: 20px 0px;
   border-radius: 5px;
@@ -24,6 +25,12 @@
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 2;
+    transition: opacity .15s ease-in-out;
+    opacity: 1;
+
+    &.loading {
+      opacity: 0!important;
+    }
 
     h4 {
       color: $secondary;
@@ -36,4 +43,6 @@
       line-height: 1rem;
     }
   }
+
+
 }
