--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -27,11 +27,16 @@ header {
       justify-content: space-evenly;
       flex-wrap: nowrap;
       list-style-type: none;
+
+      li:hover a{
+        color:lighten($primary, 30%)
+      }
   
       a{
         color:white;
         text-decoration:none;
         font-size: 1.5rem;
+        transition: color .15s ease-in-out;
 
         &.active {
           color:$primary;
