--- a/src/layout/Sidebar/style.scss
+++ b/src/layout/Sidebar/style.scss
@@ -27,6 +27,11 @@
     background-repeat: no-repeat;
     border-radius: 6px;
     cursor: pointer;
+    transition: background-color .15s ease-in-out;
+
+    &:hover {
+      background-color: lighten($primary, 40%);
+    }
 
     &--relax{
       background-image: url(../../assets/relaxation.svg);      
