--- a/src/scss/_bases.scss
+++ b/src/scss/_bases.scss
@@ -17,12 +17,13 @@ code {
 #root { 
   display:flex;
   flex-direction:column;
-  flex-wrap: nowrap;  
-  height: 100vh;
+  min-height: 100vh;
+  flex-wrap: nowrap;
   font-weight: 400;
 
   .main-container {
     flex-grow: 1;
+    height: 100%;
     display: flex;
     flex-direction: row;
   }
@@ -80,7 +81,6 @@ code {
   }
 
   &__item {
-    flex: 1 1 auto;
     height: 100%;
     width: 100%;
   }
