add JSDOC on components and add file TypeComponents to define props

--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -36,6 +36,7 @@
       flex-wrap: wrap!important;
       flex-grow: 3;
       min-width: 300px;
+      max-width: 480px;
       height: 100%;
     }
   }
