--- a/src/components/Activity/style.scss
+++ b/src/components/Activity/style.scss
@@ -4,14 +4,18 @@
   position:relative;
   width: 100%;
   height: 100%;
-  max-height: 320px;
-  min-height: 320px;
+  min-height: 270px;
   background-color: $background-light;
   padding:40px;
+  padding-top: 75px;
   border-radius: 5px;
 
   &__header {
-    margin-bottom:30px;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 30px 40px; 
 
     &__legende {
       &__item{
