--- a/src/components/Performance/style.scss
+++ b/src/components/Performance/style.scss
@@ -4,8 +4,8 @@
   position:relative;
   width: 100%;
   height: 100%;
-
-  padding: 20px 0px;
+ 
+  padding: 20px;
   border-radius: 5px;
   background-color: $background-greydark;
 
@@ -13,3 +13,4 @@
     fill: $primary!important;
   }
 }
+
